--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Basic Vue Js - HelloWorld App</title>
 
+  <link href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css" rel="stylesheet" />
   <!-- https://google.github.io/material-design-icons/#icon-font-for-the-web -->
   <!-- Using via Google Web Fonts -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
@@ -17,16 +18,22 @@
   <!-- https://v3.vuejs.org/guide/installation.html#release-notes -->
   <!-- Vue CDN -->
   <script src="https://unpkg.com/vue@next"></script>
-
 </head>
 
 <body>
-  <div id="app" class="h-screen w-full bg-gray-200 flex items-start justify-start">
-    <img src="./images/1.jpg" class="w-1/3 h-full">
-    <div class="w-full flex items-center justify-end">
-      <i class="material-icons">face</i>
-      <p class="font-semibold text-xl tracking-wider uppercase px-3"> {{ msg }}</p>
-    </div>
+  <div id="app" class="mt-6 flex flex-col items-center mx-auto bg-blue-100 ">
+    <h1 class="text-xl font-extrabold">Photo Gallery ( {{ totalGallery }} )</h1>
+    <ul>
+      <li v-for="(photo,index) in photos" class="flex justify-center m-10">
+        <button v-on:click="toggleDone(index)" >
+        <img class="h-36 w-60" :src="photo.url">
+        </button>
+        <span class="font-bold  mt-5 ml-5 ">{{photo.title}}</span> 
+        <div class="mt-5 ml-5">
+          <i v-show="photo.done" class="im im-heart text-red-400"></i>
+        </div>
+      </li>
+    </ul>
   </div>
 
   <!-- my main.js -->
