--- a/index.html
+++ b/index.html
@@ -25,31 +25,23 @@
     <div class="flex justify-center">
       <h1 class="text-xl font-extrabold">Photo Gallery ( {{ totalGallery }} )</h1>
     </div>
-    <div class="w-3/6 p-4 flex justify-end" v-show="!canvasShow">
-      <button v-show="searchBtn" @click="searchClick"><i class="im im-magnifier"></i></button>
-      <input  v-show="inputBtn"  type="text" v-model="inputTask" placeholder="Enter a new task ..." @keyup.enter="searchImg" class="p-2 bg-white rounded flex-1 border-b-2 border-blue-300 mr-4 mt-4">
-      <button v-show="cancelBtn" @click="cancelClick" class="bg-blue-600 text-white rounded" ><p class="m-2">Cancel</p></button>
-    </div>
-    <div class="w-4/6 p-4 bg-gray-900 flex justify-around" v-show="canvasShow" >
-      <img :src="canvasUrl" class="w-11/12 ">
-      <button v-on:click="canvasShow=false" class="h-1/4 focus:outline-none items-start ">
-        <i class="im im-x-mark text-white"></i>
-      </button>
-    </div>
-    <ul class="w-3/6 p-4 flex flex-col items-center mx-auto  ">
-      <li v-for="(photo,index) in photos" v-show="photo.imgShow" class="flex justify-center m-10" >
-        <button v-on:click="canvasClick(index)"class="focus:outline-none">
-          <img class="h-46 w-80" :src="photo.url">
-        </button>
-        <span class="font-bold  mx-5 ">{{photo.title}}</span> 
-        <span class="mt-5 ml-10"><i v-show="photo.done" class="im im-heart text-red-400"></i></span>
-      </li>
-      <li>{{checkItems}}</li>
-    </ul>
+    
+    <photo-search :search-btn="searchBtn" :cancel-btn="cancelBtn" :input-btn="inputBtn"  @search-click="searchClick" @cancel-click="cancelClick" @search ="searchImg" :canvas-show="canvasShow"></photo-search>
+    <photo-view :canvas-url="canvasUrl" :canvas-show="canvasShow" @canvas-drop="canvasDrop"></photo-view>
+    <photo-item :photos="photos" @canvas-click="canvasClick"></photo-item>
+   
+    <span>{{checkItems}}</span>
+
   </div>
 
   <!-- my main.js -->
   <script src="./main.js"></script>
+  <script src="./components/PhotoItem.js"></script>
+  <script src="./components/PhotoSearch.js"></script>
+  <script src="./components/PhotoView.js"></script>
+  <script>
+    const mountedApp = app.mount("#app")
+  </script>
 </body>
 
 </html>
